# BackThisUp

./: .gitignore  CMakeLists.txt  Definitions.h  File.cpp  File.h  Folder.cpp  Folder.h  Functions.cpp  Functions.h  Logger.cpp  Logger.h  README.md  RootFolder.cpp  RootFolder.h  main.cpp
Backup/: CMakeLists.txt  File.cpp  File.h  Folder.cpp  Folder.h  Manager.cpp  Manager.h  RootFolder.cpp
LoggingTools/: CMakeLists.txt  Logger.h
TrayIcon/: CMakeLists.txt  TrayIcon.cpp  TrayIcon.h  icon.xcf  resource.h  resource.rc
WebTools/: CMakeLists.txt  OneDriveConnector.cpp  OneDriveConnector.h  Parser.cpp  Parser.h  ServerSocket.cpp  ServerSocket.h  pw-example.h  pw_example.h
WebTools/curl/: CMakeLists.txt  CurlController.cpp  CurlController.h
WebTools/curl/curllib/: CMakeLists.txt
WebTools/sha1/: CMakeLists.txt
notes/: 7zip.txt  Curl.txt  curl_large_files.txt  onedriveapi.txt
