cmake_minimum_required(VERSION 3.8)

set(CMAKE_CXX_STANDARD 17)
add_subdirectory(sha1)
add_subdirectory(curl)
link_directories(curl/libcurl)
set(SOURCE_FILES OneDriveConnector.cpp OneDriveConnector.h Parser.cpp Parser.h ServerSocket.cpp ServerSocket.h pw.h)
add_library(WebTools ${SOURCE_FILES})
target_link_libraries(WebTools sha1)
target_link_libraries(WebTools Ws2_32.lib)
target_link_libraries(WebTools curl)
target_link_libraries(WebTools curl-d)